"Added Swagger annotations to department controller and updated swagger.json file"
